--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,51 +1,82 @@
 html, body {
-  font-size: 16px;
+  font-size: 12px;
   font-family: 'Avenir';
 }
 
 .page-container {
   border: 1px solid rgba(0, 89, 255, 0.376);
-  height: 80vh;
   width: 60vw;
   margin: 0 auto;
 }
 
 .page-header {
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-align: center;
   margin: 2%;
+}
+
+.post-container {
+  background-color: rgba(204, 203, 203, 0.308);
+  border: solid 1px gray;
+  width: 50vw;
+  margin: 0 auto;
 }
 
 #post-header {
   font-size: 1rem;
   text-align: center;
-  margin: 2%;
+}
+
+#post-header{
+  text-align: start;
+  margin: 1% 10% 0 10%;
+}
+
+#post-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+#post-username {
+  font-size: 1rem;
 }
 
 #post-body {
-  text-align: center;
-}
-
-#post-text {
-  text-align: center;
+  margin: 2% 10% 2% 10%;
+  font-size: 1.2rem;
+  max-width: 40vw;
 }
 
 #post-link {
   display: flex;
   justify-content: flex-end;
-  margin-left: 70%;
+  margin-left: 80%;
   position: relative;
   text-decoration: none;
   border: 1px solid gray;
-  width: 15%;
+  width: 10%;
+  margin-top: 2%;
+  margin-bottom: 1%;
 }
 
 #post-link-text {
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-decoration: none;
   color: black;
   margin: 0 auto;
 }
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+/* .form-group {
+
+} */
 
 
 @media only screen and (max-width: 600px) {
@@ -64,7 +95,9 @@ html, body {
 
   #post-link {
     margin: 0 auto;
-    top: 20%;
-    position: relative;
+    margin-top: 2%;
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
   }
 }
